# pseudo-count-atari

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  Neighbours.hpp  README.md  common.hpp  factor.hpp  init.lua  main.cpp  torch.cpp  torch.h
rocks/: pseudo-count-atari-scm-1.rockspec
src/: Neighbours.hpp  PseudoCount.cpp  factor.hpp  torch.cpp  torch.h
test/: CMakeLists.txt  main.cpp  test.cpp  test.lua
